BTF-7 Implement invited member registration and automatic login
